mongodb_with_mongoexpress/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongoexpress
  name: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  strategy: {}
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
      - image: mongo-express
        name: mongoexpress
        ports:
        - containerPort: 8081
