mongodb_with_mongoexpress/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-service
  name: mongo-service
spec:
  ports:
  - name: mongodb-port
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
