mongodb_with_mongoexpress/mongoexpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongoexpress-service
  name: mongoexpress-service
spec:
  ports:
  - name: mongoexpress-port
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongoexpress
  type: ClusterIP
