mongodb_with_mongoexpress/mongoexpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongoexpress-ingress
spec:
  rules:
  - host: foo.com
    http:
      paths:
      - backend:
          serviceName: mongoexpress-service
          servicePort: 8081
